# anchor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  version-bump.sh
avm/src/: lib.rs
cli/: Cargo.toml
cli/npm-package/: package.json
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: main.rs
client/src/: cluster.rs  lib.rs
docker/: Makefile
docs/programs/tic-tac-toe/: Anchor.toml
docs/src/components/: Hero.jsx  Layout.jsx
docs/src/pages/: _app.jsx  index.md
examples/tutorial/: package.json
examples/tutorial/basic-0/: Anchor.toml  client.js  package.json
examples/tutorial/basic-1/: Anchor.toml  package.json
examples/tutorial/basic-2/: Anchor.toml  package.json
examples/tutorial/basic-3/: Anchor.toml  package.json
examples/tutorial/basic-4/: package.json
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/program/: Cargo.toml
lang/derive/accounts/: Cargo.toml
lang/derive/space/: Cargo.toml
lang/src/: bpf_upgradeable_state.rs  common.rs  context.rs  error.rs  idl.rs  lib.rs  system_program.rs  vec.rs
lang/src/accounts/: account.rs  account_info.rs  account_loader.rs  boxed.rs  interface.rs  interface_account.rs  option.rs  program.rs  signer.rs  system_account.rs  sysvar.rs  unchecked_account.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/tests/: generics_test.rs  space.rs
safe/: Cargo.toml
safe/src/: associated_token.rs  dex.rs  governance.rs  metadata.rs  mint.rs  shmem.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
spl/: Cargo.toml
spl/src/: stake.rs  token_2022.rs  token_interface.rs
tests/: package.json
tests/anchor-cli-account/: Anchor.toml  package.json
tests/anchor-cli-account/tests/: account.ts
tests/anchor-cli-idl/: package.json  test.sh
tests/anchor-cli-idl/tests/: idl.ts
tests/bpf-upgradeable-state/: package.json
tests/bpf-upgradeable-state/tests/: bpf-upgradable-state.ts
tests/cashiers-check/: Anchor.toml  package.json
tests/cashiers-check/tests/: cashiers-check.js
tests/cfo/: Anchor.toml  package.json
tests/cfo/programs/cfo/: Cargo.toml
tests/cfo/programs/cfo/src/: lib.rs
tests/cfo/scripts/: fees.js  list-market.js  localnet.sh  trade-bot.js
tests/cfo/tests/: cfo.js
tests/chat/: Anchor.toml  package.json
tests/chat/tests/: chat.js
tests/composite/: package.json
tests/composite/tests/: composite.js
tests/cpi-returns/: Anchor.toml  package.json
tests/cpi-returns/tests/: cpi-return.ts
tests/custom-coder/: Anchor.toml  package.json
tests/declare-id/: package.json
tests/docs/: Anchor.toml  package.json
tests/errors/: Anchor.toml
tests/escrow/: Anchor.toml  package.json
tests/escrow/programs/escrow/: Cargo.toml
tests/escrow/programs/escrow/src/: lib.rs
tests/events/: package.json
tests/floats/: Anchor.toml  package.json
tests/ido-pool/: Anchor.toml  package.json
tests/lockup/: Anchor.toml  package.json
tests/misc/: Anchor.toml  miscNonRentExempt.ts  package.json
tests/misc/programs/misc/: Cargo.toml
tests/misc/programs/misc/src/: account.rs  context.rs  event.rs  lib.rs
tests/multiple-suites/: Anchor.toml  package.json
tests/multiple-suites-run-single/: Anchor.toml  package.json
tests/multisig/: Anchor.toml  package.json
tests/optional/: Anchor.toml  package.json
tests/pda-derivation/: Anchor.toml  package.json
tests/pyth/: Anchor.toml  package.json
tests/realloc/: Anchor.toml  package.json
tests/relations-derivation/: Anchor.toml  package.json
tests/safety-checks/: Anchor.toml
tests/swap/: Anchor.toml  package.json
tests/system-accounts/: Anchor.toml  package.json
tests/sysvars/: Anchor.toml  package.json
tests/tictactoe/: Anchor.toml  package.json
tests/typescript/: Anchor.toml  package.json
tests/validator-clone/: Anchor.toml  package.json
tests/zero-copy/: Anchor.toml  package.json
ts/: package.json
ts/tests/: package.json
(+216 files in other folders)
