[package]
name = "anchor-cli"
version = "0.26.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
rust-version = "1.60"
edition = "2021"
repository = "https://github.com/safely-project/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []
default = []

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
safe-anchor-lang = { path = "../lang", version = "0.26.0" }
safe-anchor-client = { path = "../client", version = "0.26.0" }
anchor-syn = { path = "../lang/syn", features = ["idl", "init-if-needed"], version = "0.26.0" }
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
safecoin-sdk = { version = "1.15.3", path = "../../Safecoin/sdk"}
safecoin-program = { version = "1.15.3", path = "../../Safecoin/sdk/program"}
safecoin-client = { version = "1.15.3", path = "../../Safecoin/client"}
safecoin-cli-config = { version = "1.15.3", path = "../../Safecoin/cli-config"}
safecoin-faucet = { version = "1.15.3", path = "../../Safecoin/faucet"}
dirs = "4.0"
heck = "0.4.0"
flate2 = "1.0.19"
tar = "0.4.35"
reqwest = { version = "0.11.4", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
tokio = "1.24"
pathdiff = "0.2.0"
cargo_toml = "0.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
portpicker = "0.1.1"
