[package]
name = "anchor-client"
version = "0.26.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
rust-version = "1.60"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
debug = []

[dependencies]
safe-anchor-lang = { path = "../lang", version = "0.26.0" }
anyhow = "1.0.32"
regex = "1.4.5"
serde = { version = "1.0.122", features = ["derive"] }
safecoin-client = { version = "1.15.3", path = "../../Safecoin/client"}
safecoin-sdk = { version = "1.15.3", path = "../../Safecoin/sdk"}
safecoin-account-decoder = { version = "1.15.3", path = "../../Safecoin/account-decoder"}
thiserror = "1.0.20"
url = "2.2.2"
