[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
rust-version = "1.60"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
safe-anchor-lang = { path = "../../../../lang" }
safe-anchor-spl = { path = "../../../../spl" }
safe-token-2022 = { version = "0.5.0", features = ["no-entrypoint"] }
